# VectemBuildTool

./: .clang-format  .gitignore  CMakeLists.txt  README.md  m-compile.bat  x-build-toolchain.sh  x-compile.sh  x-exec.sh
Source/: CMakeLists.txt  main.cpp
Source/BuildConfig/: BuildConfig.h  BuildConfigReader.cpp  BuildConfigReader.h  IBuildConfigReader.h
Source/Compiler/: ClangCompiler.cpp  ClangCompiler.h  Compilation.h  ICompiler.h  LinuxCompiler.cpp  LinuxCompiler.h  MsvcCompiler.cpp  MsvcCompiler.h
Source/Module/: IModuleDependencySorter.h  IModuleInfoReader.h  IModuleManager.h  Module.h  ModuleBuildTool.h  ModuleGraphDependencySorter.cpp  ModuleGraphDependencySorter.h  ModuleInfoReader.cpp  ModuleInfoReader.h  ModuleManager.cpp  ModuleManager.h
Source/Unit/: IUnitConfigReader.h  IUnitRulesReader.h  Unit.h  UnitBuilder.cpp  UnitBuilder.h  UnitConfigReader.cpp  UnitConfigReader.h  UnitRulesReader.cpp  UnitRulesReader.h
Test/Project/: BuildConfig.lua  Project.Program.lua  Project.Unit.lua
Test/Project/Modules/ExeModuleTest/: Module.lua
Test/Project/Modules/ExeModuleTest/Source/: main.cpp
Test/Project/Modules/ExeModuleTestModule/: ExeModuleTest.Module.lua
Test/Project/Modules/ModuleTest/Source/: test.cpp
Test/Project/Modules/ModuleTestModule/: ModuleTest.Module.lua
Test/Project/Modules/ModuleTestModule/Source/: test.cpp  test.h
Test/Project/Targets/: Test.Target.lua
lib/Debug/: VectemBuildTool.exp  VectemBuildTool.lib
